Fix deprecated API warnings and Maven JVM noise in Java sample
DOSaleComplete.java:
- new Double(25.25) -> Double.valueOf(25.25)  (deprecated since Java 9)
- Thread.currentThread().sleep() -> Thread.sleep()  (static called on instance)
- Remove dead 'new ShipTo()' that was immediately discarded

.mvn/jvm.config:
- Add --enable-native-access=ALL-UNNAMED to suppress jansi System.load
  warning when Maven 3.9.x runs on JDK 21+